--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@ A real life application of parallel computing would be creating climate models. 
           a triangle and then outputs a message indicating whether the triangle
           is a right triangle.</p>
         <iframe src="https://trinket.io/embed/python/46287976f4" width="100%" height="356" frameborder="0" marginwidth="0" marginheight="0" allowfullscreen></iframe>
+
+        <p>Output:</p>
+        <img src="assets/images/2.2.png">
       </div>
 
       <div class="group">
@@ -58,12 +61,18 @@ A real life application of parallel computing would be creating climate models. 
           output the number; otherwise, it should output A for 10, B for 11, C for
           12… and Z for 35.</p>
         <iframe src="https://trinket.io/embed/python/b64075bd98" width="100%" height="356" frameborder="0" marginwidth="0" marginheight="0" allowfullscreen></iframe>
+
+        <p>Output:</p>
+        <img src="assets/images/2.3.png">
       </div>
 
       <div class="group">
         <p>4. Write a program that will display all numbers divisible by 3, 4 and 5
           from 1-50.</p>
         <iframe src="https://trinket.io/embed/python/31a16a1193" width="100%" height="356" frameborder="0" marginwidth="0" marginheight="0" allowfullscreen></iframe>
+
+        <p>Output:</p>
+        <img src="assets/images/2.4.png">
       </div>
     </section>
 
@@ -86,6 +95,9 @@ Multiple instructions are processed by multiple processing units. One instructio
           descending order, and if it's "none," it should return the original list
           unaltered.</p>
         <iframe src="https://trinket.io/embed/python/6a2a16831a" width="100%" height="356" frameborder="0" marginwidth="0" marginheight="0" allowfullscreen></iframe>
+
+        <p>Output:</p>
+        <img src="assets/images/3.3.png">
       </div>
       
     </section>
@@ -101,7 +113,10 @@ Multiple instructions are processed by multiple processing units. One instructio
         c. All numbers divisible by 9.
         d. All prime numbers
         e. All numbers that contains the digit 9 (e.g 29, 91, 393, 961)</pre>
-        <iframe src="https://trinket.io/embed/python/f09492018f" width="100%" height="356" frameborder="0" marginwidth="0" marginheight="0" allowfullscreen></iframe>
+        <iframe src="https://trinket.io/embed/python/f09492018f" width="100%" height="800" frameborder="0" marginwidth="0" marginheight="0" allowfullscreen></iframe>
+
+        <p>Output:</p>
+        <img src="assets/images/4.1.png">
       </div>
 
       <div class="group">
@@ -112,6 +127,9 @@ N=3
 sum_of_lastN_nodes(6, N)
 Output: Sum of last three nodes in the linked list is 4 + 1 + 12 = 15.</pre>
         <iframe src="https://trinket.io/embed/python/3e5c00ffb0" width="100%" height="356" frameborder="0" marginwidth="0" marginheight="0" allowfullscreen></iframe>
+
+        <p>Output:</p>
+        <img src="assets/images/4.2.png">
       </div>
     </section>
   </main>
