--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <h2 class="title">Level 1: (4 points each)</h2>
       <div class="group">
         <pre><h3 style="margin: 0">1. Differentiate between SIMD and MIMD? Explain.</h3>
-— The difference between SIMD and MIMD is that SIMD processes the same single instruciton but operates on different data.
+— The difference between SIMD and MIMD is that SIMD processes the same single instruction but operates on different data.
 An example would be reverting an RGB picture to its negative equivalent. The single instruction is to revert every color to its negative equivalent, and the multiple data are the RGB colors.
 
 While for MIMD, multiple instructions are processed by multiple processing units. One instruction is divided into smaller instructions which are processed in a parallel manner.
@@ -82,7 +82,7 @@ A real life application of parallel computing would be creating climate models. 
       <h2 class="title">Level 3: (6 points each, +2 points if you get 2 LEVEL 3 questions correct.)</h2>
       <div class="group">
         <pre><h3 style="margin: 0">2. Explain the difference between Serial Computing and Parallel Computing.</h3>
-— Serial computing works by processing multiple instrucitons in a serial manner, one by one. The opposite would be Parallel Computing where multiple instructions are processed simultaneously.
+— Serial computing works by processing multiple instructions in a serial manner, one by one. The opposite would be Parallel Computing where multiple instructions are processed simultaneously.
 Multiple instructions are processed by multiple processing units. One instruction is divided into smaller instructions which are processed in a parallel manner.</pre>
       </div>
 
