--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="styles.css">
-  <title>Document</title>
+  <title>GOPEZ FINAL EXAM</title>
 </head>
 <body>
   <h1 style="text-align: center; margin-bottom: 36px; color: #243A73">Parallel and Distributed Computing Final Exam</h1>
@@ -39,7 +39,6 @@ An example would be a server handling multiple data from multiple requests. The 
       <div class="group">
         <pre><h3 style="margin: 0">1. How does parallel programming/computing works? What do you think will be the advantage of utilizing parallel approach?</h3>
 — Parallel computing works by leveraging multiple CPUs to process multiple instructions. The advantage would be faster performance and lesser time.
-
 A real life application of parallel computing would be creating climate models. Multiple factors such as the data of land, air, ice, and water interact with each other, where parallel computing can analyze and each data points individually to provide faster processing of the model.</pre>
       </div>
 
